Updated target sdk to 28

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="physical_biological_sciences"><![CDATA[Physical & Biological sciences]]></string>
     <string name="agriculture">Agriculture</string>
     <string name="msu_logo">MSU lOGO</string>
-    <string name="u00a9_2018_maseno_university">© 2018 Maseno University</string>
+    <string name="u00a9_2018_maseno_university">Powered by Otema Technologies © 2018</string>
     <string name="pbs"><![CDATA[Physical & Biological Sciences]]></string>
     <string name="visit_our_stand">Visit Our Stand</string>
     <string name="bio_alkanol_gel_fuel">Bio Alkanol Gel Fuel</string>
